# rag-gtm-system

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/api/: __init__.py  app.py  dependencies.py
src/api/routes/: __init__.py  documents.py  health.py  queries.py
src/models/: __init__.py  api.py  core.py  exceptions.py
src/repositories/: __init__.py  async_database.py
src/repositories/db/: schema.py
src/services/: __init__.py  protocols.py
